# cattrs

./: .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  Justfile  MANIFEST.in  Makefile  README.md  README.rst  pg.py  pg_mypy.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.benchmarks/Windows-CPython-3.10-64bit/: 0001_base.json
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  ISSUE_TEMPLATE.md  SECURITY.md
.github/workflows/: codspeed.yml  main.yml  pypi-package.yml  zizmor.yml
bench/: bench.py  test_attrs_collections.py  test_attrs_enums.py  test_attrs_nested.py  test_attrs_omit_defaults.py  test_attrs_primitives.py  test_enums.py  test_primitives.py  test_tuples.py  test_validators.py
cattr/: __init__.py  _compat.py  cattrs.py  converters.py  disambiguators.py  function_dispatch.py  metadata.py  multistrategy_dispatch.py  validators.py
docs/: Makefile  basics.md  benchmarking.md  benchmarking.rst  cattr.experimental.rst  cattr.preconf.rst  cattr.rst  cattrs.gen.rst  cattrs.preconf.rst  cattrs.rst  cattrs.strategies.rst  conf.py  converters.md  converters.rst  customizing.md  customizing.rst  defaulthooks.md  dumping.rst  generating.rst  history.md  indepth.md  index.md  index.rst  installation.rst  loading.rst  make.bat  migrations.md  modules.rst  preconf.md  preconf.rst  recipes.md  requirements.txt  strategies.md  strategies.rst  structuring.md  structuring.rst  unions.md  unions.rst  unstructuring.md  unstructuring.rst  (+5 more)
docs/_static/: custom.css
src/cattr/: __init__.py  _compat.py  converters.py  disambiguators.py  dispatch.py  errors.py  function_dispatch.py  gen.py  generation.py  generics.py  multistrategy_dispatch.py
src/cattr/experimental/: gen.py
src/cattr/preconf/: bson.py  cbor2.py  json.py  msgpack.py  orjson.py  pyyaml.py  tomlkit.py  ujson.py
src/cattrs/: __init__.py  _compat.py  _constraints.py  _generics.py  _types.py  annotated.py  cols.py  constraints.py  converters.py  disambiguators.py  dispatch.py  enums.py  errors.py  fns.py  gen.py  predicates.py  subclasses.py  tuples.py  typealiases.py  types.py  v.py
src/cattrs/preconf/: __init__.py  _all.py  bson.py  cbor2.py  json.py  msgpack.py  msgspec.py  orjson.py  pyyaml.py  tomlkit.py  tomllib.py  ujson.py
src/cattrs/strategies/: __init__.py  _class_methods.py  _listfromdict.py  _subclasses.py  _unions.py  unions.py
src/cattrs/strategies/_extra_types/: __init__.py  _builtins.py  _uuid.py  _zoneinfo.py
src/cattrs/v/: __init__.py  _fluent.py  _hooks.py  _types.py  _validators.py  fns.py
tests/: __init__.py  _compat.py  asserts.py  conftest.py  forwardrefs.py  generics.py  helpers.py  module.py  test_563.py  test_annotated_overrides.py  test_any.py  test_baseconverter.py  test_cattrs_as_python.py  test_cols.py  test_constraints.py  test_converter.py  test_converter_inheritance.py  test_converter_typing.yml  test_copy.py  test_dataclasses.py  test_deep_nest_custom_namespace.py  test_defaultdicts.py  test_dict_generation.py  test_dicts.py  test_disambiguators.py  test_disambigutors.py  test_dumps.py  test_enums.py  test_errors.py  test_factory_hooks.py  test_final.py  test_forwardref.py  test_forwardref_563.py  test_function_dispatch.py  test_gen.py  test_gen_collections.py  test_gen_dict.py  test_gen_dict_563.py  test_gen_dict_649.py  test_genconverter.py  (+35 more)
tests/metadata/: __init__.py  test_genconverter.py  test_roundtrips.py  test_wrapper.py
tests/nested_type_check_test/: nested_a.py  nested_attr_o.py  nested_b.py  nested_c.py  nested_d.py  nested_e.py  nested_o.py
tests/pep563_examples/: compound.py  point.py  region.py  roi.py
tests/preconf/: test_msgspec.py  test_msgspec_314_cpython.py  test_msgspec_cpython.py  test_pyyaml.py  test_tomlkit.py
tests/strategies/: test_class_methods.py  test_extra_types.py  test_from_from_dict.py  test_include_subclasses.py  test_list_from_dict.py  test_native_unions.py  test_tagged_unions.py  test_tagged_unions_695.py  test_union_passthrough.py  test_union_passthrough_695.py  test_union_single_collection_dispatch.py
tests/v/: conftest.py  test_ensure.py  test_ensure_typing.yml  test_fluent.py  test_fluent_typing.yml  test_mypy.yml  test_typing_validators.yml  test_v.py  test_validation.py  test_validators.py  test_validators_mypy.yml  test_validators_typing.yml
