[flake8]
exclude = docs, cattr/vendor
ignore = E203, E501, W503

[coverage:run]
omit =
    cattr/_compat.py
    cattr/vendor/typing.py
    cattr/vendor/python3/typing.py

[coverage:paths]
source =
   src/cattr
   .tox/*/lib/python*/site-packages/cattr
   .tox/pypy*/site-packages/cattr

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
addopts = -l