[flake8]
exclude = docs, cattr/vendor
ignore = E203, E501, W503

[coverage:run]
omit =
    cattr/_compat.py
    cattr/vendor/typing.py
    cattr/vendor/python3/typing.py

[coverage:paths]
source =
   src/cattr
   .tox/*/lib/python*/site-packages/cattr
   .tox/pypy*/site-packages/cattr

[metadata]
license_file = LICENSE

[tool:pytest]
testpaths = tests
addopts = -l --benchmark-sort=fullname --benchmark-warmup=true --benchmark-warmup-iterations=5  --benchmark-group-by=fullname